--- a/c.html
+++ b/c.html
@@ -115,7 +115,7 @@
 						<div class="row">
 							<div class="col-12 col-lg-8 col-xl-7">
 								<h2 class="text-white mb-4 animated" data-animation="fadeInUp" data-animation-delay="150">Our Mission</h2>
-								<p class="text-white animated" data-animation="fadeInUp" data-animation-delay="150">Mauris ut sem elementum, tristique velit sed, volutpat mauris. Ut interdum nibh sit amet imperdiet condimentum. Nulla sed tellus placerat, vehicula risus ac, sollicitudin quam. Quisque pharetra porta libero, a sagittis nisl tristique non. Etiam sapien purus, cursus eu pulvinar et, tempor sit amet ipsum. Sed a nisl sit amet lorem dictum hendrerit.</p>
+								<p class="text-white animated" data-animation="fadeInUp" data-animation-delay="150">We Achive to Do Stuff</p>
 							</div>
 						</div>
 
