--- a/c.html
+++ b/c.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 
-		<title>Home | Lana - Creative Coming Soon Template</title>
+		<title>Missions | Salty - Memes</title>
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
